# imagedecoder.avif

./: .travis.yml  CMakeLists.txt  FindAOM.cmake  FindAVIF.cmake  README.md  azure-pipelines.yml
debian/: changelog.in  control  copyright  rules
depends/common/libavif/: flags.txt  libavif.sha256  libavif.txt
imagedecoder.avif/: addon.xml.in
src/: AvifPicture.cpp
